<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FreeOTP</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="invalid_token">The token specified was invalid!</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="install_title">Install Barcode Scanner?</string>
    <string name="install_message">Barcode Scanner is required. Would you like to install it?</string>
    <string name="no_keys">No OTP keys installed.</string>
    <string name="add_token">Add Token</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="interval">Interval</string>
    <string name="counter">Counter</string>
    <string name="issuer">Issuer</string>
    <string name="id">ID</string>
    <string name="secret">Secret</string>
    <string name="type">Type</string>
    <string name="algorithm">Algorithm</string>
    <string name="digits">Digits</string>

    <string name="about_title">About %1$s</string>
    <string name="about_version">Version %1$s (%2$d)</string>
    <string name="about_copyright">© 2013 - Red Hat, Inc., et al.</string>
    <string name="about_license">FreeOTP is licensed under %1$s.</string>
    <string name="about_website">For more information, see our %s.</string>
    <string name="about_feedback">We welcome your feedback:&lt;br/&gt;• %1$s&lt;br/&gt;• %2$s</string>
    <string name="about_icons">Some icons used by this application are reproduced from work created and shared by the Android Open Source Project and used according to terms described in the Creative Commons 2.5 Attribution License.</string>

    <string name="link_website">&lt;a href=&quot;http://freeotp.fedorahosted.org&quot;&gt;website&lt;/a&gt;</string>
    <string name="link_report_a_problem">&lt;a href=&quot;http://fedorahosted.org/freeotp/newticket&quot;&gt;Report a Problem&lt;/a&gt;</string>
    <string name="link_ask_for_help">&lt;a href=&quot;http://lists.fedorahosted.org/mailman/listinfo/freeotp-devel&quot;&gt;Ask for Help&lt;/a&gt;</string>
    <string name="link_apache2">&lt;a href=&quot;http://www.apache.org/licenses/LICENSE-2.0.html&quot;&gt;Apache 2.0&lt;/a&gt;</string>

    <string name="error_camera_open">Error while opening camera!</string>

    <string name="delete_summary">This is your last chance: if you delete this token, it will be gone forever. It will not be disabled on the server.</string>
    <string name="delete_question">Would you like to delete this token?</string>

    <plurals name="tokens_selected">
        <item quantity="one">%d token selected</item>
        <item quantity="other">%d tokens selected</item>
    </plurals>

    <string-array name="token_types">
        <item>Time-based (TOTP)</item>
        <item>Counter-based (HOTP)</item>
    </string-array>

    <string-array name="algorithms">
        <item>MD5</item>
        <item>SHA1</item>
        <item>SHA256</item>
        <item>SHA512</item>
    </string-array>
</resources>
